--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-apollo": "^2.5.8",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
+    "semantic-ui-react": "^0.87.3",
     "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
@@ -29,12 +30,15 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "base-href-webpack-plugin": "^2.0.0",
+    "css-loader": "^3.1.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-react": "^7.14.2",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.12.0",
     "react-hot-loader": "^4.12.6",
     "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2",
