--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
     "base-href-webpack-plugin": "^2.0.0",
     "css-loader": "^3.1.0",
     "eslint-config-airbnb": "^17.1.1",
